// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render icon with type closed 1`] = `
<span
  class="ta-component awesome-icon awesome-icon_icon_stop ServiceStateIcon ServiceStateIcon_type_closed"
  data-lego="react"
/>
`;

exports[`Should render icon with type develop 1`] = `
<span
  class="ta-component awesome-icon awesome-icon_icon_play ServiceStateIcon ServiceStateIcon_type_develop"
  data-lego="react"
/>
`;

exports[`Should render icon with type need-info 1`] = `
<span
  class="ta-component awesome-icon awesome-icon_icon_question-circle ServiceStateIcon ServiceStateIcon_type_need-info"
  data-lego="react"
/>
`;

exports[`Should render icon with type supported 1`] = `
<span
  class="ta-component awesome-icon awesome-icon_icon_pause ServiceStateIcon ServiceStateIcon_type_supported"
  data-lego="react"
/>
`;
